--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,6 +2,7 @@
 
 <table>
   <tr>
+    <th>Title</th>
     <th></th>
     <th></th>
     <th></th>
@@ -9,6 +10,7 @@
 
 <% @books.each do |book| %>
   <tr>
+    <td><%= book.title %></td>
     <td><%= link_to 'Show', book %></td>
     <td><%= link_to 'Edit', edit_book_path(book) %></td>
     <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
